--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-
+<body> {
+    background-color: var(--cor-de-fundo);
+}
 </body>
 
 </html>
