--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body> {
-    background-color: var(--cor-de-fundo);
-}
+<body>
+
 </body>
 
 </html>
-
